修复GPU持续增长问题

--- a/supervisor.conf
+++ b/supervisor.conf
@@ -7,3 +7,9 @@ command=/home/ubuntu/noVNC/utils/launch.sh --vnc localhost:5901
 user=ubuntu
 stdout_logfile=/var/log/novnc.log
 redirect_stderr=true
+
+
+[program:restartunity]
+command=nohup /bin/bash /home/ubuntu/restartunity &
+user=ubuntu
+
