去除界面定时重启设定

--- a/supervisor.conf
+++ b/supervisor.conf
@@ -9,7 +9,7 @@ stdout_logfile=/var/log/novnc.log
 redirect_stderr=true
 
 
-[program:restartunity]
-command=nohup /bin/bash /home/ubuntu/restartunity &
-user=ubuntu
+;[program:restartunity]
+;command=nohup /bin/bash /home/ubuntu/restartunity &
+;user=ubuntu
 
